# understory

./: .typos.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/benches/: index_compare_backends.rs
docs/: issue_focus_direction_and_reading_order.md
examples/: Cargo.toml  README.md
examples/examples/: responder_basics.rs  responder_box_tree.rs  responder_precise_hit.rs
understory_box_tree/: README.md
understory_box_tree/src/: damage.rs  lib.rs  tree.rs  types.rs  util.rs
understory_event_state/: README.md
understory_event_state/src/: click.rs
understory_focus/src/: lib.rs
understory_index/: Cargo.toml  README.md
understory_index/src/: backend.rs  damage.rs  index.rs  lib.rs  types.rs  util.rs
understory_index/src/backends/: bvh.rs  grid.rs  mod.rs  rtree.rs
understory_precise_hit/: Cargo.toml  README.md
understory_precise_hit/src/: lib.rs  stroke.rs
understory_responder/: Cargo.toml  README.md
understory_responder/src/: dispatcher.rs  hover.rs  lib.rs  router.rs  types.rs
understory_responder/src/adapters/: box_tree.rs  hit2d.rs  mod.rs
understory_virtual_list/: README.md
understory_virtual_list/src/: fixed.rs  grid_track.rs  lib.rs  model.rs  prefix_sum.rs  virtual_list.rs
